# PS2SMBM

./: CMakeLists.txt  README.md  dbManager.py  main.cpp  psmb.ini  psmb.yaml  smbManager.py  smbm.cpp  smbm.h
resources/: config.ini
sql/: init.sql
templates/: addGame.html  index.html
templates/resources/: form.css  main.css
ui/: mainwindow.ui
